# aopkg

./: .gitignore  Cargo.toml  Dockerfile  PACKAGING.md  README.md
.github/workflows/: dockerimage.yml
migrations/: 20210108233354_initial.sql  20210125122500_collate.sql  20210125182800_github.sql  20210131212900_requires.sql
src/: db.rs  description.rs  main.rs  manifest.rs  oauth.rs  package.rs  templates.rs  webhook.rs
static/: style.css
templates/: api.html  base.html  faq.html  index.html  package.html  packages.html  upload.html
