[package]
name = "aopkg"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-files = "0.6.0-beta.1"
actix-session = { git = "https://github.com/andy128k/actix-extras.git", branch = "update-dependencies" }
actix-web = { version = "4.0.0-beta.1", default-features = false, features = ["rustls"] }
askama = "0.10"
dotenv = "0.15"
env_logger = { version = "0.8", default-features = false, features = [
    "termcolor",
    "atty",
    "humantime"
] }
lazy_static = "1.4"
markdown = "0.3"
semver = { version = "0.11", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { git = "https://github.com/launchbadge/sqlx.git", default-features = false, features = ["runtime-actix-rustls", "sqlite", "macros", "migrate"] }
toml = "0.5"
tokio = { version = "1.1", default-features = false }
zip = "0.5"

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
