[package]
name = "aopkg"
version = "0.1.0"
authors = ["Jens Reidel <adrian@travitia.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-files = "0.6"
actix-session = { version = "0.9", default-features = false, features = [
    "cookie-session",
] }
actix-web = { version = "4.0", default-features = false, features = ["macros"] }
awc = { version = "3.0", default-features = false, features = ["rustls"] }
askama = "0.12"
dotenv = "0.15"
env_logger = { version = "0.11", default-features = false, features = [
    "color",
    "humantime",
] }
lazy_static = "1.4"
log = "0.4"
pulldown-cmark = "0.10"
semver = { version = "1.0", default-features = false, features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "macros",
    "migrate",
] }
toml = "0.8"
tokio = { version = "1", default-features = false }
zip = { version = "0.6", default-features = false, features = ["deflate"] }

[profile.release]
codegen-units = 1
debug = false
incremental = false
lto = true
opt-level = 3
panic = "abort"
